--- a/inf02/inf02-0.md
+++ b/inf02/inf02-0.md
@@ -8,3 +8,5 @@
 Все аргументы и значение выражения представимы 32-разрядными знаковыми целыми числами.
 
 Использовать оперативную память запрещено, - можно использовать только регистры.
+
+__Язык:	arm-gas - arm-linux-gnueabi-as__
