--- a/inf02/inf02-1.md
+++ b/inf02/inf02-1.md
@@ -6,4 +6,4 @@
 ```
 Функция должна вычислять значение x0+∑xi, где 0≤i<N
 
-__arm-gas - arm-linux-gnueabi-as__
+__Язык:	arm-gas - arm-linux-gnueabi-as__
