--- a/inf03/inf03-0.md
+++ b/inf03/inf03-0.md
@@ -1,4 +1,4 @@
-Задача inf03-0: asm-x86/basics
+# Задача inf03-0: asm-x86/basics
 Реализуйте две функции на языке ассемблера x86 (IA-32) или x86-64 с сигнатурами:
 
 ```
